@@ -31,7 +31,6 @@ import java.util.List;
 
 import static org.testng.Assert.assertEquals;
 import static org.testng.Assert.assertNotNull;
-import static org.testng.Assert.assertNull;
 import static org.testng.Assert.assertTrue;
 
 /**
@@ -46,11 +45,14 @@ public class EdDSASignerTest extends BaseJWTTest {
 
   @Test
   public void decodePrivateKey() throws Exception {
-    List<String> privateKeys = Arrays.asList(
+    List<String> privateKeys = List.of(
+        "ed_dsa_ed448_private_key.pem",
+        "eddsa_ed448_private_key.pem",
         "ed_dsa_ed25519_private_key.pem",
-        "ed_dsa_private_key.pem");
+        "ed_dsa_private_key.pem"
+    );
 
-    // These keys do not contain a public key
+    // These keys do not contain a public key. However, the public key can be produced from the private key for EdDSA.
     for (String f : privateKeys) {
       String message = "For file [" + f + "]";
       String encodedPEM = new String(Files.readAllBytes(Paths.get("src/test/resources/" + f)));
@@ -59,7 +61,10 @@ public class EdDSASignerTest extends BaseJWTTest {
       PEM pem = PEM.decode(encodedPEM);
       assertNotNull(pem.privateKey, message);
       assertEquals(pem.privateKey.getFormat(), "PKCS#8", message);
-      assertNull(pem.publicKey, message);
+      assertNotNull(pem.publicKey, message);
+      assertEquals(pem.publicKey.getFormat(), "X.509", message);
+      String expectedAlgorithm = fipsEnabled ? (f.contains("ed448") ? "Ed448" : "Ed25519") : "EdDSA";
+      assertEquals(pem.publicKey.getAlgorithm(), expectedAlgorithm, message);
     }
 
     // Private keys that contain a public key
@@ -73,6 +78,8 @@ public class EdDSASignerTest extends BaseJWTTest {
       assertEquals(pem.privateKey.getFormat(), "PKCS#8", message);
       assertNotNull(pem.publicKey, message);
       assertEquals(pem.publicKey.getFormat(), "X.509", message);
+      String expectedAlgorithm = fipsEnabled ? "Ed25519" : "EdDSA";
+      assertEquals(pem.publicKey.getAlgorithm(), expectedAlgorithm, message);
     }
   }
 
